src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwP0.25-dhU.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-fullscreen false\n    default-column-width { proportion 0.25; }\n    default-window-height {  }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 300 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 300 × 688, bounds: 1248 × 688, states: [Activated]
