src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwU-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    default-column-width {  }\n    border { on; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 0 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 1 × 680, bounds: 1240 × 680, states: [Activated]
