src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwU-dhF500-b-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AN\nconfig:\nwindow-rule {\n    open-fullscreen false\n    default-column-width {  }\n    default-window-height { fixed 500; }\n    border { on; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 0 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen, Activated]
